--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -38,6 +38,12 @@
         <li class="nav-item">
           <a class="nav-link active" routerLink="/life-cycle">Life Cycle</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/hostlistener">HostListener</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/input-output">Input Output</a>
+        </li>
       </ul>
 
       <!-- Dark Mode Toggle Button -->
